[project]
name = "lodestone-server-manager"
version = "0.0.1"
description = "Manage your Minecraft servers in the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.3.2",
    "textual>=7.5.0",
]

[project.scripts]
lodestone = "lodestone.__main__:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["lodestone"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff.lint]
# Core rule sets
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear
  "C90", # McCabe complexity
  "ANN", # type annotations
  "T20", # print / debug statements
  "Q",   # quote consistency
  "I",   # isort (import sorting)
  "UP",  # pyupgrade
  "PTH", # use pathlib
  "SIM", # simplify
  "RET", # return
]

# Noisy or contextually acceptable rules
ignore = [
  # Docstrings (optional discipline)
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",

  # Handled by Black/Ruff Format
  "E203",
  "E501",

  # Pragmatic typing
  "ANN201", # no return type for public funcs
  "ANN204", # no return type for __init__

  # Exceptions / debugging
  "TRY003", # short exception messages OK
  "T201",   # allow print()

  # Security (non-crypto context)
  "S311", # random is fine

  # Imports / scripts
  "E402",   # imports not at top level
  "INP001", # implicit namespace packages
]

[tool.ruff.lint.mccabe]
max-complexity = 20

# Relax rules in tests
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "D",   # no docstring pressure
  "ANN", # loose typing
]

[tool.ruff]
# Align with Black
line-length = 88
target-version = "py311"

# Project hygiene
exclude = [".venv", "venv", "__pycache__", "build", "dist"]
