[project]
name = "lodestone-server-manager"
version = "0.0.1"
description = "Manage your Minecraft servers in the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.5.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "textual>=7.5.0",
]

[project.urls]
repository = "https://github.com/milndr/lodestone-server-manager"

[project.scripts]
lodestone = "lodestone.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lodestone"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.ruff.lint]
# Core rule sets
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear
  "C90", # McCabe complexity
  "ANN", # type annotations
  "T20", # print / debug statements
  "I",   # isort (import sorting)
  "UP",  # pyupgrade
  "PTH", # use pathlib
  "SIM", # simplify
  "RET", # return
  "N",   # naming
  "S",   # security best practices
  "TRY", # try/except best practices
  "G",   # logging
  "FBT", # boolean trap
  "A",   # python builtins used as vars or parameters
  "COM", # missing trailing commas
  "ARG", # unused arguments
]

# Noisy or contextually acceptable rules
ignore = [
  # Docstrings (optional discipline)
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",

  # Handled by Black/Ruff Format
  "E203",
  "E501",
  "COM812",

  # Pragmatic typing
  "ANN201", # no return type for public funcs
  "ANN204", # no return type for __init__

  # Exceptions / debugging
  "TRY003", # short exception messages OK

  # Security (non-crypto context)
  "S311", # random is fine

  # Imports / scripts
  "E402",   # imports not at top level
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 15

# Relax rules in tests
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "D",   # no docstring pressure
  "ANN", # loose typing
]

[tool.ruff]
# Align with Black
line-length = 88
target-version = "py311"

# Project hygiene
exclude = [".venv", "venv", "__pycache__", "build", "dist"]
